# switchboard-plug-pantheon-shell

./: .travis.yml  CMakeLists.txt  README.md  config.vala.cmake  meson.build  plug.plug  plug.plugin
.github/workflows/: main.yml  release.yml
cmake/: Translations.cmake
data/: Check.css  RemoveButton.css  appearance-styles.css  desktop.metainfo.xml.in  gschema.xml  icons.gresource.xml  io.elementary.switchboard-plug-pantheon-shell.appdata.xml.in  io.elementary.switchboard.pantheon-shell.appdata.xml.in  io.elementary.switchboard.plug.desktop.gschema.xml  meson.build  pantheon-plug-shell.desktop  pantheon-shell.metainfo.xml.in  plug.css
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  LINGUAS  POTFILES  ab.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  ay.po  az.po  ba.po  be.po  bg.po  bn.po  br.po  bs.po  btk.po  ca.po  ckb.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  desktop-plug.pot  desktop.pot  dz.po  ee.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  (+106 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+160 more)
set-wallpaper-contract/: CMakeLists.txt  Config.vala.in  config.vala.in  meson.build  set-wallpaper.contract  set-wallpaper.contract.in  set-wallpaper.vala
src/: CMakeLists.txt  Cache.vala  Config.vala.in  Dock.vala  GalaSettings.vala  IOHelper.vala  ImageWidget.vala  PantheonAccountsServicePlugin.vala  PlankSettings.vala  Plug.vala  PngReader.vala  Settings.vala  SlingshotSettings.vala  SolidColorContainer.vala  ThumbnailCache.vala  ThumbnailGenerator.vala  Translations.vala  Utils.vala  Wallpaper.vala  WallpaperContainer.vala  WallpaperOperation.vala  desktop-plug.vala  gala-plug.vala  meson.build
src/Interfaces/: IRepository.vala  IWallpaperContainer.vala
src/Providers/: CustomDirectoryProvider.vala  DirectoryProvider.vala  IProvider.vala  UnsplashProvider.vala
src/Repositories/: DirectoryRepository.vala  SelectableDirectoryRepository.vala  UnsplashRepository.vala
src/Views/: Appearance.vala  Dock.vala  HotCorners.vala  Multitasking.vala  Panel.vala  Text.vala  Wallpaper.vala
src/Widgets/: AbstractWallpaperContainer.vala  DoubleWallpaperContainer.vala  GenericContainer.vala  ImageContainer.vala  RemoteWallpaperContainer.vala  SolidColorContainer.vala  TextFontOptionRadioGroup.vala  UriContainer.vala  WallpaperContainer.vala  XMLContainer.vala
vapi/: gnome-desktop-3.0.vapi  png.vapi
