i18n.merge_file(
    input: 'io.elementary.switchboard-plug-pantheon-shell.appdata.xml.in',
    output: 'io.elementary.switchboard-plug-pantheon-shell.appdata.xml',
    po_dir: join_paths(meson.source_root (), 'po', 'extra'),
    install_dir: join_paths(get_option('datadir'), 'metainfo'),
    install: true
)
